# tddddd_micro

./: .gitignore  Makefile  bootstrap.py  config.py  conftest.py  docker-compose.yml  main.py  model.py  orm.py  pyproject.toml  repository.py  requirements.txt  services.py  test_allocate.py  test_api.py  test_batches.py  test_orm.py  test_repository.py  test_services.py
adapters/: orm.py  redis_eventpublisher.py  repository.py
domain/: commands.py  events.py  model.py
entrypoints/: main.py  redis_eventconsumer.py  schema.py
examples/: requests_search.py  urllib_search.py
service_layer/: handlers.py  messagebus.py  services.py  unit_of_work.py  views.py
snippets/: hash_file.py  ref_sync.py  sync.py  test_determine_actions.py  test_sync.py  test_value_object.py  tests_with_dependencies.py
src/allocation/domain/: model.py
tests/: conftest.py  utils.py
tests/e2e/: api_client.py  test_api.py  test_external_events.py
tests/integration/: test_orm.py  test_repository.py  test_uow.py  test_views.py
tests/unit/: test_allocate.py  test_batches.py  test_handlers.py  test_product.py  test_services.py
