[tool.poetry]
name = "tddddd-micro"
version = "0.1.0"
description = "TDD, DDD, FastAPI experimet app"
authors = ["Andrey Belskiy <anb@smena.space>"]
readme = "README.md"
packages = [{include = "tddddd_micro"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.2"}
pytest = "^8.0.1"
black = "^24.2.0"
requests = "^2.31.0"
sqlalchemy = "^2.0.27"
psycopg2 = "^2.9.9"
tenacity = "^8.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
